--- a/twostyle.css
+++ b/twostyle.css
@@ -18,7 +18,6 @@ html, body {
   canvas {
     display: block;
     margin:auto;
-    margin-top: 5%;
   }
 
   h1 {
@@ -33,4 +32,12 @@ html, body {
     position: fixed;
     bottom: 2%;
     left: 4%
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+  a:hover {
+    color: #FDE200;
   }
