--- a/fourteenstyle.css
+++ b/fourteenstyle.css
@@ -6,13 +6,18 @@
     font-style: normal;
   }
 
+  @font-face {
+    font-family: "actionMan";
+    src: url(action_man_extended.ttf);
+  }
+
 html, body {
     margin: 0;
     padding: 0;
   }
   
   body {
-    background-color: black;
+    background-image: url("end.png");
   }
   
   canvas {
@@ -20,12 +25,15 @@ html, body {
     margin:auto;
     padding-top: 10%;
   }
+
   h1 {
-    font-family: "Alata";
-    font-size: 40pt;
+    font-family: "actionMan";
+    font-size: 8rem;
     margin: auto;
     text-align: center;
-    margin-top: 10%;
+    margin-top: 3%;
+    -webkit-text-stroke: 1pt;
+    -webkit-text-stroke-color: black;
   }
 
   .lamp {
@@ -37,7 +45,9 @@ html, body {
   a{
     text-decoration: none;
     color: #FDE200;
+    -webkit-text-stroke: 2%;
+    -webkit-text-stroke-color: black;
   }
   a:hover {
-    color: #019541;
+    color: #0491C6;
   }
