--- a/indexstyle.css
+++ b/indexstyle.css
@@ -26,18 +26,20 @@ html, body {
     margin-top: 5%;
   }
   h1 {
-    font-family: "Alata";
-    font-size: 40pt;
+    font-family: "actionMan";
+    font-size: 8rem;
     margin: auto;
     text-align: center;
-    margin-top: 10%;
+    margin-top: 3%;
+    -webkit-text-stroke: 1pt;
+    -webkit-text-stroke-color: black;
   }
   
   p {
     font-family: "Alata";
     font-size: 40pt;
     position: fixed;
-    bottom: 7%;
+    bottom: 10%;
     left: 4%
   }
 
@@ -49,10 +51,17 @@ html, body {
 
   a{
     text-decoration: none;
-    color: black;
+    color: #FDE200;
+    -webkit-text-stroke: 2%;
+    -webkit-text-stroke-color: black;
   }
   a:hover {
-    color: #FDE200;
+    color: #019541;
   }
+
+  .tab {
+    display: inline-block;
+    margin-left: 30%;
+}
 
 
