--- a/tenstyle.css
+++ b/tenstyle.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
+@font-face {
+  font-family: "actionMan";
+  src: url(action_man_extended.ttf);
+}
+
 .alata-regular {
     font-family: "Alata", sans-serif;
     font-weight: 400;
@@ -18,7 +23,6 @@ html, body {
   canvas {
     display: block;
     margin:auto;
-    padding-top: 10%;
   }
   h1 {
     font-family: "Alata";
