--- a/thirteenstyle.css
+++ b/thirteenstyle.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 
+@font-face {
+  font-family: "actionMan";
+  src: url(action_man_extended.ttf);
+}
+
 .alata-regular {
     font-family: "Alata", sans-serif;
     font-weight: 400;
@@ -18,7 +23,6 @@ html, body {
   canvas {
     display: block;
     margin:auto;
-    padding-top: 10%;
   }
   h1 {
     font-family: "Alata";
@@ -26,6 +30,8 @@ html, body {
     margin: auto;
     text-align: center;
     margin-top: 10%;
+    position: fixed;
+    margin-left: 32%;
   }
 
   .lamp {
@@ -40,4 +46,8 @@ html, body {
   }
   a:hover {
     color: #FDE200;
+  }
+
+  .bottomtext{
+    margin-top: 20%;
   }
