--- a/ninestyle.css
+++ b/ninestyle.css
@@ -28,6 +28,15 @@ html, body {
     margin-top: 10%;
   }
 
+  p {
+    font-family: "Alata";
+    color: black;
+    font-size: 16pt;
+    position: fixed;
+    right: 5%;
+    bottom: 2%;
+  }
+
   .lamp {
     position: fixed;
     bottom: 2%;
