--- a/twostyle.css
+++ b/twostyle.css
@@ -30,6 +30,15 @@ html, body {
     margin-left: 35%;
   }
 
+  p {
+    font-family: "Alata";
+    color: black;
+    font-size: 16pt;
+    position: fixed;
+    right: 5%;
+    bottom: 2%;
+  }
+
   .lamp {
     position: fixed;
     bottom: 2%;
