--- a/tenstyle.css
+++ b/tenstyle.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "actionMan";
-  src: url(action_man_extended.ttf);
+  src: url(action_man_extended.otf);
 }
 
 .alata-regular {
