--- a/indexstyle.css
+++ b/indexstyle.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "actionMan";
-  src: url(action_man_extended.ttf);
+  src: url(action_man_extended.otf);
 }
 
 html, body {
