--- a/twelvestyle.css
+++ b/twelvestyle.css
@@ -6,6 +6,11 @@
     font-style: normal;
   }
 
+  @font-face {
+    font-family: "actionMan";
+    src: url(action_man_extended.otf);
+  }
+
 html, body {
     margin: 0;
     padding: 0;
@@ -18,7 +23,6 @@ html, body {
   canvas {
     display: block;
     margin:auto;
-    padding-top: 10%;
   }
   h1 {
     font-family: "Alata";
