--- a/fourstyle.css
+++ b/fourstyle.css
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: "actionMan";
-    src: url(action_man_extended.otf);
+    src: url('action_man_extended.otf');
   }
 
 html, body {
@@ -24,7 +24,7 @@ html, body {
     display: block;
     margin:auto;
     margin-top: 8%;
-    margin-bottom: 4%;
+    margin-bottom: 1%;
   }
 
   h1 {
@@ -48,6 +48,10 @@ html, body {
     position: fixed;
     bottom: 2%;
     left: 4%
+  }
+
+  .lamp:hover{
+    opacity: 70%;
   }
 
   a{
