--- a/about.css
+++ b/about.css
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: "actionMan";
-    src: url(action_man_extended.otf);
+    src: url('action_man_extended.otf');
   }
 
 html, body {
@@ -53,6 +53,10 @@ html, body {
     left: 4%
   }
 
+  .lamp:hover{
+    opacity: 70%;
+  }
+  
   a{
     text-decoration: none;
     color: #FDE200;
@@ -63,8 +67,3 @@ html, body {
     color: #0491C6;
   }
 
-.cat {
-    position: fixed;
-    bottom: 2%;
-    left: 4%
-  }
