--- a/fivestyle.css
+++ b/fivestyle.css
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: "actionMan";
-    src: url(action_man_extended.otf);
+    src: url('action_man_extended.otf');
   }
 
 html, body {
@@ -49,6 +49,11 @@ html, body {
     bottom: 2%;
     left: 4%
   }
+
+  .lamp:hover{
+    opacity: 70%;
+  }
+
 .picture:hover{
     opacity: 70%;
   }
