--- a/fourteenstyle.css
+++ b/fourteenstyle.css
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: "actionMan";
-    src: url(action_man_extended.otf);
+    src: url('action_man_extended.otf');
   }
 
 html, body {
@@ -18,6 +18,7 @@ html, body {
   
   body {
     background-image: url("end.png");
+    background-size: cover;
   }
   
   canvas {
@@ -56,4 +57,8 @@ html, body {
     position: fixed;
     bottom: 5%;
     left: 4%
+  }
+
+  .cat:hover{
+    opacity: 70%;
   }
