--- a/indexstyle.css
+++ b/indexstyle.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "actionMan";
-  src: url(action_man_extended.otf);
+  src: url('action_man_extended.otf');
 }
 
 html, body {
@@ -18,6 +18,7 @@ html, body {
   
   body {
     background-image: url("home.png");
+    background-size: cover;
   }
   
   canvas {
@@ -39,7 +40,7 @@ html, body {
     font-family: "Alata";
     font-size: 40pt;
     position: fixed;
-    bottom: 10%;
+    bottom: 15%;
     left: 4%
   }
 
@@ -47,6 +48,10 @@ html, body {
     position: fixed;
     bottom: 2%;
     left: 4%
+  }
+
+  .lamp:hover{
+    opacity: 70%;
   }
 
   a{
