--- a/thirteenstyle.css
+++ b/thirteenstyle.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "actionMan";
-  src: url(action_man_extended.otf);
+  src: url('action_man_extended.otf');
 }
 
 .alata-regular {
@@ -47,6 +47,10 @@ html, body {
     position: fixed;
     bottom: 2%;
     left: 4%
+  }
+
+  .lamp:hover{
+    opacity: 70%;
   }
 
   a{
