--- a/elevenstyle.css
+++ b/elevenstyle.css
@@ -8,7 +8,7 @@
 
   @font-face {
     font-family: "actionMan";
-    src: url('action_man_extended.otf');
+    src: url('Action_Man_Extended.otf');
   }
 
 html, body {
