--- a/thirteenstyle.css
+++ b/thirteenstyle.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: "actionMan";
-  src: url('action_man_extended.otf');
+  src: url('Action_Man_Extended.otf');
 }
 
 .alata-regular {
